$Header: /cvsroot/arsperl/ARSperl/CHANGES,v 1.16 1998/02/09 17:59:43 jcmurphy Exp $

CHANGES for ARSperl

Revision history for ARSperl.

MM/DD/YY
=======================================================================
#######################################################################
=======================================================================
02/09/98        (1.54)
 
  o (JCM)  fixed bug in ars_EncodeDiary()
  o (JCM)  added ars_MergeEntry.pl example script

=======================================================================
#######################################################################
=======================================================================
12/15/97        (1.53)

  o (JCM)  fixed some minor errors in doc

=======================================================================
#######################################################################
=======================================================================
11/19/97        (1.5206)
 
  o (JCM)  added ars_GetVUI to the ARS.pm exports line.
  o (JCM)  added refreshCode to GetCharMenu hash
  o (JCM)  fixed bug in groupList value change in 1.5205

=======================================================================
#######################################################################
=======================================================================
11/04/97	(1.5205)

  o (JCM)  updated the groupList value returned by GetSchema()
           so that it contains the correct key words.

=======================================================================
#######################################################################
=======================================================================
10/29/97        (1.5204)

  o (JCM)  added ars_GetControlStructFields()

=======================================================================
#######################################################################