@@ -1,10 +1,18 @@
-$Header: /cvsroot/arsperl/ARSperl/CHANGES,v 1.16 1998/02/09 17:59:43 jcmurphy Exp $
+$Header: /cvsroot/arsperl/ARSperl/CHANGES,v 1.17 1998/02/13 18:46:07 jcmurphy Exp $
 
 CHANGES for ARSperl
 
 Revision history for ARSperl.
 
 MM/DD/YY
+=======================================================================
+#######################################################################
+=======================================================================
+//        (1.55)
+
+  o (JCM)  patched perl_BuildEntryIdList to make it more robust
+           (Ulrich Pfeifer <pfeifer@wait.de>)
+
 =======================================================================
 #######################################################################
 =======================================================================
